# quantbox

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING_LLM.md  Makefile  README.md  conductor.yml  jimek.yml  pyproject.toml  validation_report.json
.claude/: git-guard.json  settings.json  settings.local.json  skill-use-log.jsonl  worktree.json
.claude/agents/: parity-reproduction-engineer.md  pit-data-auditor.md  quant-verifier.md
.claude/hooks/: git-workflow-guard.py
.claude/rules/: git-workflow.md
.githooks/: pre-commit
.github/: dependabot.yml  qute-pr.yml
.github/workflows/: ci.yml  claude-review.yml  review-gate.yml  version-consistency.yml  version-guard.yml
config/: run_backtest_crypto_trend.yaml
config/accounts/: binance.yaml
configs/: example_minimal.yaml  run_backtest_altcoin_crash_bounce.yaml  run_backtest_beglobal.yaml  run_backtest_ml_prediction.yaml  run_crypto_regime.yaml  run_fund_selection.yaml  run_futures_paper.yaml  run_futures_paper_momentum_ls.yaml  run_synthetic_backtest.yaml  run_trade_from_allocations.yaml  run_trade_from_allocations_binance_live.yaml  run_trade_from_allocations_ibkr_paper.yaml  run_trading_full.yaml  run_trading_multi_strategy.yaml  run_xsmom.yaml
contracts/: ARTIFACTS.md
cookbook/canonical/: README.md  build_fixture.py  fixture.parquet  fixture_volume.parquet  regen_goldens.py  run_all.py
cookbook/configs/: example_minimal.yaml  instruments.yaml  run_backtest_crypto_trend.yaml  run_backtest_portfolio_optimizer.yaml  run_fund_selection.yaml  run_futures_paper.yaml  run_futures_paper_carver_trend.yaml  run_futures_paper_crypto_trend.yaml  run_spot_paper_crypto_trend.yaml  run_stress_test.yaml  run_synthetic_backtest.yaml  run_trade_from_allocations.yaml  run_trade_from_allocations_binance_live.yaml  run_trade_from_allocations_ibkr_paper.yaml
cookbook/scripts/: 01_quickstart_backtest.py  02_custom_strategy.py  03_inspect_artifacts.py  backtest_from_date.py  make_sample_data.py
docs/: BROKER_SECRETS.md  LLM_OPERATIONS.md  PRD.md  README.md  TRADING_BRIDGE_ADVANCED.md  quantlab-vs-quantbox-comparison.md
docs/adr/: 0002-layered-api.md  0003-autoresearch-as-driver-not-runtime.md  README.md  _template.md
docs/agents/: issue-tracker.md
docs/architecture/: README.md  adapters.md  api-layers.md  autoresearch.md  lifecycle.md  pipeline-design.md  plugin-authoring.md  principles.md  skills.md  templates.md
docs/datasets/: README.md  _template.md
docs/decisions/: DEC-0001-library-not-framework.md  DEC-0002-layered-api.md  DEC-0003-autoresearch-as-driver-not-runtime.md  README.md
docs/guides/: backtesting.md  multi-repo-workflow.md  pipeline-chaining.md  quantbox-integration-guide.md  trading-bridge.md
docs/methodology/: README.md  _template.md  carry-v1.md  carver-trend-v2.md
docs/plans/: 2026-02-19-pipeline-gaps-design.md  2026-02-19-pipeline-gaps-implementation.md
docs/playbooks/: README.md  add-a-broker-plugin.md  add-a-pipeline-plugin.md  add-a-plugin.md  add-a-skill.md  add-an-adapter.md  approval-gate.md  multi-repo-workflow.md  promote-a-methodology.md  report-blocks.md  run-an-autoresearch-loop.md  trading-bridge.md
docs/reference/: broker-secrets.md  llm-operations.md
docs/runbooks/: README.md  _template.md
docs/specs/: README.md
examples/: 01_quickstart_backtest.py  02_custom_strategy.py  03_inspect_artifacts.py
plugins/: manifest.schema.json  manifest.yaml
recipes/: add_broker_plugin.md  add_pipeline_plugin.md
schemas/: README.md  aggregated_weights.schema.json  portfolio_daily.schema.json  prices.schema.json  rankings.schema.json  targets.schema.json
scripts/: approve_orders.py  compare_backtesting_engines.py  compare_quantlab_quantbox.py  dry_run_strategies.py  generate_report.py  make_sample_data.py  paper_trade_all.py  refresh_skill.py  run_carver_hyperliquid.py  run_carver_live.py  test_broker_simple.py  test_data_fetcher.py  test_integrated_flow.py  test_pipeline_stepwise.py  test_pipeline_vs_prod.py  test_strategies_cached.py  test_strategy.py  test_universe_selection.py  validate_port.py
skills/: README.md
skills/quantbox-autoresearch/: SKILL.md
templates/: README.md  dataset.md  decision.md  runbook.md
tests/: test_agents.py  test_altcoin_crash_bounce.py  test_analysis_dsr.py  test_analysis_hac.py  test_backtest_optimizer.py  test_beglobal_strategy.py  test_binance_data_universe.py  test_binance_reduce_only_close.py  test_broker_fill_confirmation.py  test_cli.py  test_contracts_new_protocols.py  test_crypto_regime_trend.py  test_crypto_trend.py  test_crypto_trend_nan_weights.py  test_crypto_trend_regime_optional.py  test_data_utils.py  test_dataset_contract.py  test_duckdb_universe_parity.py  test_exec_status_normalization.py  test_feature_cross_sectional.py  test_feature_discovery.py  test_feature_technical.py  test_features.py  test_frequency.py  test_futures_paper_load_state.py  test_futures_rebalancer_freeze.py  test_hac_parity.py  test_hyperliquid_broker_positions.py  test_hyperliquid_cached_data.py  test_hyperliquid_data_plugin.py  test_hyperliquid_nav_sum.py  test_indicators.py  test_kraken_broker.py  test_kraken_data.py  test_kraken_dust_regression.py  test_kraken_perpair_minnotional.py  test_live_loop_silent_failures.py  test_local_file_data.py  test_manifest_provenance.py  test_metrics_var.py  (+62 more)
(+180 files in other folders)
