# Workspace root. The installable package for downstreams is packages/quantbox-core (name: quantbox).
[project]
name = "quantbox-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["quantbox"]

[tool.uv.sources]
quantbox = { workspace = true }

[tool.uv.workspace]
members = ["packages/quantbox-core"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line length handled by formatter
    "E741",    # ambiguous variable name (common in quant: l, O, I)
    "B008",    # function call in default arg (typer uses this)
    "SIM108",  # ternary — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["quantbox"]

[tool.pytest.ini_options]
testpaths = ["packages/quantbox-core/tests", "tests"]
filterwarnings = ["ignore::DeprecationWarning"]
