[project]
name = "quantbox"
version = "0.1.0"
description = "Quant research & trading core with plugin marketplace (entry points)."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyyaml>=6.0",
  "pyarrow>=14.0",
  "duckdb>=0.10.0",
  "jsonschema>=4.19",
  "tenacity>=8.0",
  "httpx>=0.27",
  "pycoingecko>=3.0",
  "typer>=0.9",
  "vectorbt>=0.26",
  "numba>=0.59",
]

[project.optional-dependencies]
ibkr = ["ib_insync"]
binance = ["python-binance"]
ccxt = ["ccxt>=4.0"]
ml = ["scikit-learn>=1.3"]
simulation = ["arch>=8.0"]
viz = ["matplotlib>=3.7", "seaborn>=0.12"]
full = ["python-binance", "ccxt>=4.0", "ib_insync", "scikit-learn>=1.3", "arch>=8.0"]

[project.scripts]
quantbox = "quantbox.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8",
]

[tool.uv_build]
package-data = { quantbox = ["artifact_schemas/*.schema.json"], "quantbox.plugins" = ["manifest.yaml", "manifest.schema.json"] }

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "cookbook/configs/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line length handled by formatter
    "E741",    # ambiguous variable name (common in quant: l, O, I)
    "B008",    # function call in default arg (typer uses this)
    "SIM108",  # ternary — readability preference
]

[tool.ruff.lint.per-file-ignores]
"src/quantbox/plugins/strategies/crypto_trend.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["quantbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
