[project]
name = "quantbox"
version = "0.3.14"
description = "Quant research & trading core with plugin marketplace (entry points)."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3.3",
  "scipy>=1.15.3",
  "pyyaml>=6.0.3",
  "pyarrow>=24.0.0",
  "duckdb>=1.5.4",
  "jsonschema>=4.26.0",
  "tenacity>=9.1.4",
  "httpx>=0.28.1",
  "pycoingecko>=3.2.0",
  "typer>=0.26.8",
  "vectorbt>=1.0.0",
  "numba>=0.66.0",
  "pandas-market-calendars>=5.4.0",
]

[project.optional-dependencies]
ibkr = ["ib_insync"]
binance = ["python-binance"]
ccxt = ["ccxt>=4.5.64"]
ml = ["scikit-learn>=1.7.2"]
simulation = ["arch>=8.0"]
viz = ["matplotlib>=3.10.9", "seaborn>=0.13.2"]
full = ["python-binance", "ccxt>=4.5.64", "ib_insync", "scikit-learn>=1.7.2", "arch>=8.0"]

[project.scripts]
quantbox = "quantbox.cli:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.uv_build]
package-data = { quantbox = ["artifact_schemas/*.schema.json"], "quantbox.plugins" = ["manifest.yaml", "manifest.schema.json"] }

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "cookbook/configs/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line length handled by formatter
    "E741",    # ambiguous variable name (common in quant: l, O, I)
    "B008",    # function call in default arg (typer uses this)
    "SIM108",  # ternary — readability preference
]

[tool.ruff.lint.per-file-ignores]
"src/quantbox/plugins/strategies/crypto_trend.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["quantbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
# Default `pytest -q` skips slow pipeline-smoke + canonical reproductions.
# CI runs each as a separate job.
addopts = "-m 'not pipeline_smoke and not canonical_reproduction'"
markers = [
    "pipeline_smoke: end-to-end pipeline tests (slow). Run via `pytest -m pipeline_smoke`.",
    "canonical_reproduction: end-to-end backtests against committed goldens. Run via `pytest -m canonical_reproduction`.",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.14"
version_files = [
    "pyproject.toml:version",
    "src/quantbox/__init__.py:__version__",
]
update_changelog_on_bump = true
tag_format = "v$version"
ignored_tag_formats = ["rb-$version", "rb-*"]
major_version_zero = true
